
- Cybernetic augmentation:
    - Max bonus reduced from 12% to 10%.
    - Ship types required to master for max bonus reduced from 30 to 20.
    - Civilian ships no longer count.
- MP assignment algorithm for combat encounters now takes deployed time (with enough enemies in range to degrade CR) into account.
- Regenerate option now strongly prefers mastery effects different from the effects prior to regenerating.
- Added id to S-Mod autofit plugin
- Mastery effect that reduces weapon flux for each empty mount no longer counts decorative and non-weapon slots.
- Nerfed missile-regen-on-kill mastery.
- Buffed residual armor mastery.
- Buffed energy mine mastery effect base damage by 20% and fixed issue that caused piercing arcs not to scale with mastery bonuses.

0.11.4
----------
- Removed FileNotFoundException from some debug code.
- Fixed issue with unused MP cost mastery.

0.11.3
----------
Mastery weights have been changed, generated masteries will be different.

- Adjusted the weights of many randomly selected mastery effects; in general, effects that were too common have been made less common.
- Crew loss mastery no longer generates for ships specs without crew.
- Fixed "excess fuel" warning showing up on game load with masteries that increase fuel capacity.
- Fixed S-mod capacity levels being unseeded when random mode is enabled.
- Handled possible (but which should never happen) cyclic base ship chain.

0.11.2
----------
- Fixed another issue with flagship tracker not working in some cases.

0.11.1
----------
- Fixed an infinite MP exploit -- knowledge constructs no longer grant MP to skins.

0.11.0
----------
- Added the ability to create knowledge constructs by spending 10 MP. These can then be sold for credits.
- Added progression options to evolve NPC fleet difficulty over time.
    - Progression is based on total player MP gain for all combat ships, excluding those gained passively for skins.